chore: release v1.3.5 (Seamless Embed Design)